[package]
name = "raft"
version = "0.1.0"
authors = ["Nicholas Dujay <nickdujay@gmail.com>"]

[lib]
name = "raft"
path = "src/lib.rs"

[[bin]]
name = "raftd"
path = "src/main.rs"

[dependencies]
rand = "0.3"
log = "^0.3"
env_logger = "^0.4"
error-chain = "^0.7"
clap = "^2"
bytes = "0.4"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.8"
